--- a/dashboard/templates/product.html
+++ b/dashboard/templates/product.html
@@ -1,6 +1,6 @@
 
 <!-- Section Divider -->
-<hr class="my-5">
+<span class="m-5"></span>
 {% include 'graph.html' %}
 
 <!-- ================= Product Management Table ================= -->
