--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -24,7 +24,7 @@
 
             <div class="d-flex justify-content-between align-items-center">
                 <button type="submit" class="btn btn-primary">Login</button>
-                <a href="{% url 'account:password_reset' %}">Forgot Password?</a>
+                <a href="{% url 'account:forgot_password' %}">Forgot Password?</a>
             </div>
 
             <p class="text-center mt-3 small">
